--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <!-- Classic favicon -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Farfalle</title>
 
-<!-- PNG favicons -->
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <!-- Favicon links -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-<!-- Apple touch icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background-color: #f8f8f2; /* off-white */
+      font-family: 'Futura', 'Arial Black', Arial, sans-serif;
+      font-weight: 700; /* bold */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #333;
+      font-size: 5rem;
+      user-select: none;
+    }
+  </style>
 </head>
+<body>
+  farfalle
+</body>
+</html>
