--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <title>Farfalle</title>
 
   <!-- Favicon links -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+ 
 
   <style>
     body {
