--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Favicon links -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
  
 
   <style>
