--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <style>
     body {
+
+      cursor: url('path-to-image.png'), auto;
       margin: 0;
       height: 100vh;
       background-color: #f8f8f2; /* off-white */
