--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       margin: 0;
       height: 100vh;
       background-color: #f8f8f2; /* off-white */
-      font-family: 'Futura', 'Arial Black', Arial, sans-serif;
+      font-family: 'Futura', 'Arial Black', sans-serif;
       font-weight: 700; /* bold */
       display: flex;
       justify-content: center;
