--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       color: #333;
       font-size: 5rem;
       user-select: none;
-      cursor: url('/bowtie-cursor.png') 16 16, auto;
+      cursor: url('/path-to-image.png') 16 16, auto;
     }
 
     .section {
