--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <div id="sketch-container"></div>
 
   <div class="section" id="section1">Farfalle</div>
-  <div class="section" id="section2">About</div>
-  <div class="section" id="section3">Contact</div>
+  <div class="section" id="section2">Ha you fuckin herb</div>
+  <div class="section" id="section3">go fuck yourself</div>
 
   <!-- p5.js library -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
