--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+
+  <!-- p5.js -->
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
 
   <style>
     body {
       margin: 0;
-      background-color: #f8f8f2; /* off-white */
+      background-color: #f8f8f2;
       font-family: 'Georgia', 'Arial Black', sans-serif;
       font-weight: 700;
       color: #333;
@@ -22,132 +25,87 @@
       overflow-x: hidden;
     }
 
-    /* Container for p5 canvas, positioned absolutely at top */
-    #sketch-container {
+    canvas {
+      display: block;
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0; /* behind other content */
+      z-index: -1;
     }
 
-    /* Hide the Farfalle text because sketch draws it */
-    #section1 {
-      position: relative;
-      height: 100vh; /* full viewport height */
-      /* hide text, keep layout for scroll */
-      color: transparent;
-      user-select: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: transparent; /* let canvas background show */
-      font-size: 5rem;
-      font-weight: 700;
-    }
-
-    /* Other sections below the canvas */
     .section {
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-      z-index: 1; /* above canvas */
     }
 
+    #section1 { background-color: #f8f8f2; }
     #section2 { background-color: #e0dfd5; }
     #section3 { background-color: #d0cec7; }
+
+    /* 📱 Mobile fix */
+    @media (max-width: 768px) {
+      .section {
+        padding: 0 20px;
+        text-align: center;
+        font-size: 2.5rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Container for p5.js canvas -->
-  <div id="sketch-container"></div>
-
   <div class="section" id="section1">Farfalle</div>
-  <div class="section" id="section2">Ha you fuckin herb</div>
-  <div class="section" id="section3">go fuck yourself</div>
-
-  <!-- p5.js library -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
+  <div class="section" id="section2">About</div>
+  <div class="section" id="section3">Contact</div>
 
   <script>
-    let farfalleImg;
-    let icons = [];
-    const iconCount = 15;
-    let customFont;
+    let font;
+    let farfalles = [];
 
     function preload() {
-      farfalleImg = loadImage('assets/farfalle.png');
-      customFont = loadFont('fonts/the.otf');
+      font = loadFont('fonts/the.otf');
     }
 
     function setup() {
-      let canvas = createCanvas(windowWidth, windowHeight);
-      canvas.parent('sketch-container');
-
-      textAlign(CENTER, CENTER);
-      textSize(80);
-      textStyle(BOLD);
-      textFont(customFont);
-
-      for (let i = 0; i < iconCount; i++) {
-        let x = i * (width / iconCount) - random(50);
-        let y = random(height);
-        let speed = random(0.2, 1.0);
-        icons.push({ x, y, speed });
+      createCanvas(windowWidth, windowHeight);
+      textFont(font);
+      textSize(40);
+      noStroke();
+      for (let i = 0; i < 30; i++) {
+        farfalles.push({
+          x: random(width),
+          y: random(height),
+          speed: random(0.2, 1),
+          offset: random(TWO_PI)
+        });
       }
     }
 
     function draw() {
-      background('#f8f8f2'); // match your off-white background
+      clear();
+      for (let f of farfalles) {
+        f.x += f.speed;
+        if (f.x > width + 100) {
+          f.x = -100;
+          f.y = random(height);
+        }
 
-      fill(0);
-      textFont(customFont);
-      text('Farfalle', width / 2, height / 2);
+        let progress = f.x / width;
+        let shadowDist = lerp(40, 0, progress);
+        let shadowWidth = lerp(40, 20, progress);
+        let shadowHeight = 20;
+        let shadowColor = color(80, 80, 80, lerp(100, 255, progress));
 
-      for (let icon of icons) {
-        let imgWidth = 50;
-        let imgHeight = (farfalleImg.height / farfalleImg.width) * imgWidth;
-
-        // Dynamic shadow offset
-        let shadowMaxOffset = 120;
-        let shadowMinOffset = 5;
-        let shadowOffset = map(icon.x, 0, width, shadowMaxOffset, shadowMinOffset);
-        shadowOffset = constrain(shadowOffset, shadowMinOffset, shadowMaxOffset);
-
-        // Dynamic horizontal scale for shadow width
-        let maxScaleX = 2.0;
-        let minScaleX = 1.0;
-        let scaleX = map(icon.x, 0, width, maxScaleX, minScaleX);
-        scaleX = constrain(scaleX, minScaleX, maxScaleX);
-
-        // Dynamic shadow alpha for fading effect
-        let shadowAlphaMin = 30;
-        let shadowAlphaMax = 100;
-        let shadowAlpha = map(icon.x, 0, width, shadowAlphaMin, shadowAlphaMax);
-        shadowAlpha = constrain(shadowAlpha, shadowAlphaMin, shadowAlphaMax);
-
-        // Draw scaled, fading shadow
+        fill(shadowColor);
         push();
-        tint(0, shadowAlpha);
-        translate(icon.x - shadowOffset - (imgWidth * (scaleX - 1)) / 2, icon.y);
-        scale(scaleX, 1);
-        image(farfalleImg, 0, 0, imgWidth, imgHeight);
+        translate(f.x - shadowDist, f.y);
+        scale(shadowWidth / 20, shadowHeight / 20);
+        text('farfalle', 0, 0);
         pop();
 
-        // Draw main icon
-        noTint();
-        image(farfalleImg, icon.x, icon.y, imgWidth, imgHeight);
-
-        icon.x += icon.speed;
-
-        if (icon.x > width) {
-          icon.x = -imgWidth;
-          icon.y = random(height);
-          icon.speed = random(0.2, 1.0);
-        }
+        fill(0);
+        text('farfalle', f.x, f.y);
       }
     }
 
@@ -157,4 +115,5 @@
   </script>
 </body>
 </html>
+
 
