--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
   <!-- Container for p5.js canvas -->
   <div id="sketch-container"></div>
 
-  <div class="section" id="section1">Farfalle</div>
-  <div class="section" id="section2">Ha you fuckin herb</div>
-  <div class="section" id="section3">go fuck yourself</div>
+ <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
+<div class="section" id="section2"><div class="section-content">About</div></div>
+<div class="section" id="section3"><div class="section-content">Contact</div></div>
+
 
   <!-- p5.js library -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
