--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
       font-weight: 700;
     }
 
+
+.section-content {
+  width: 100%;
+  text-align: center;
+}
+
+/* For small screens, add horizontal padding */
+@media (max-width: 768px) {
+  .section-content {
+    padding: 0 1rem;
+    box-sizing: border-box;
+  }
+}
+    
     /* Other sections below the canvas */
     .section {
       height: 100vh;
