--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <div id="sketch-container"></div>
 
  <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
-<div class="section" id="section2"><div class="section-content">About</div></div>
-<div class="section" id="section3"><div class="section-content">Contact</div></div>
+<div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
+<div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
 
   <!-- p5.js library -->
