--- a/index.html
+++ b/index.html
@@ -25,53 +25,47 @@
       overflow-x: hidden;
     }
 
-    /* Container for p5 canvas, positioned absolutely at top */
     #sketch-container {
       position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 0; /* behind other content */
+      z-index: 0;
     }
 
-    /* Hide the Farfalle text because sketch draws it */
     #section1 {
       position: relative;
-      height: 100vh; /* full viewport height */
-      /* hide text, keep layout for scroll */
+      height: 100vh;
       color: transparent;
       user-select: none;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: transparent; /* let canvas background show */
+      background-color: transparent;
       font-size: 5rem;
       font-weight: 700;
     }
 
+    .section-content {
+      width: 100%;
+      text-align: center;
+    }
 
-.section-content {
-  width: 100%;
-  text-align: center;
-}
+    @media (max-width: 768px) {
+      .section-content {
+        padding: 0 1rem;
+        box-sizing: border-box;
+      }
+    }
 
-/* For small screens, add horizontal padding */
-@media (max-width: 768px) {
-  .section-content {
-    padding: 0 1rem;
-    box-sizing: border-box;
-  }
-}
-    
-    /* Other sections below the canvas */
     .section {
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      z-index: 1; /* above canvas */
+      z-index: 1;
     }
 
     #section2 { background-color: #e0dfd5; }
@@ -79,15 +73,12 @@
   </style>
 </head>
 <body>
-  <!-- Container for p5.js canvas -->
   <div id="sketch-container"></div>
 
- <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
-<div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
-<div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
+  <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
+  <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
+  <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
-
-  <!-- p5.js library -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 
   <script>
@@ -119,9 +110,15 @@
     }
 
     function draw() {
-      background('#f8f8f2'); // match your off-white background
+      background('#f8f8f2');
 
-      fill(0);
+      // Dynamic color based on vertical mouse position
+      let topColor = color(0); // black
+      let bottomColor = color('#f4d35e'); // yellow
+      let fadeAmt = constrain(mouseY / height, 0, 1);
+      let fadedColor = lerpColor(topColor, bottomColor, fadeAmt);
+
+      fill(fadedColor);
       textFont(customFont);
       text('Farfalle', width / 2, height / 2);
 
@@ -129,25 +126,21 @@
         let imgWidth = 50;
         let imgHeight = (farfalleImg.height / farfalleImg.width) * imgWidth;
 
-        // Dynamic shadow offset
         let shadowMaxOffset = 120;
         let shadowMinOffset = 5;
         let shadowOffset = map(icon.x, 0, width, shadowMaxOffset, shadowMinOffset);
         shadowOffset = constrain(shadowOffset, shadowMinOffset, shadowMaxOffset);
 
-        // Dynamic horizontal scale for shadow width
         let maxScaleX = 2.0;
         let minScaleX = 1.0;
         let scaleX = map(icon.x, 0, width, maxScaleX, minScaleX);
         scaleX = constrain(scaleX, minScaleX, maxScaleX);
 
-        // Dynamic shadow alpha for fading effect
         let shadowAlphaMin = 30;
         let shadowAlphaMax = 100;
         let shadowAlpha = map(icon.x, 0, width, shadowAlphaMin, shadowAlphaMax);
         shadowAlpha = constrain(shadowAlpha, shadowAlphaMin, shadowAlphaMax);
 
-        // Draw scaled, fading shadow
         push();
         tint(0, shadowAlpha);
         translate(icon.x - shadowOffset - (imgWidth * (scaleX - 1)) / 2, icon.y);
@@ -155,7 +148,6 @@
         image(farfalleImg, 0, 0, imgWidth, imgHeight);
         pop();
 
-        // Draw main icon
         noTint();
         image(farfalleImg, icon.x, icon.y, imgWidth, imgHeight);
 
@@ -175,4 +167,5 @@
   </script>
 </body>
 </html>
+
 
