--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 <body>
   <div id="sketch-container"></div>
 
+  <div class="dropdown">
+  <div class="menu-icon">&#9776;</div> <!-- hamburger icon -->
+  <div class="dropdown-content">
+    <a href="#section1">Home</a>
+    <a href="#section2">About</a>
+    <a href="#section3">Contact</a>
+    <!-- Add more links here if needed -->
+  </div>
+</div>
+
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
   <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
