--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,71 +60,24 @@
         box-sizing: border-box;
       }
     }
-
-    /* Dropdown Menu */
-    .dropdown {
-      position: fixed;
-      top: 20px;
-      right: 30px;
-      z-index: 20;
-      font-size: 2rem;
-      user-select: none;
-    }
-
-    .menu-icon {
-      cursor: pointer;
-      padding: 10px 14px;
-      background-color: rgba(255,255,255,0.8);
-      border-radius: 10px;
-      transition: background-color 0.2s;
-    }
-
-    .menu-icon:hover {
-      background-color: #e0dfd5;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      top: 60px;
-      right: 0;
-      background-color: white;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-      border-radius: 10px;
-      overflow: hidden;
-      z-index: 100;
-    }
-
-    .dropdown-content a {
-      color: #333;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      font-size: 1.2rem;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #f4d35e;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
   </style>
 </head>
 <body>
   <div id="sketch-container"></div>
 
-  <!-- Dropdown Menu -->
-  <div class="dropdown">
-    <div class="menu-icon">&#9776;</div>
-    <div class="dropdown-content">
-      <a href="#section1">Home</a>
-      <a href="#section2">About</a>
-      <a href="#section3">Contact</a>
-    </div>
+  <!-- Menu Button -->
+<div id="menu-button">
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+
+  <div id="dropdown">
+    <a href="#section1">Home</a>
+    <a href="#section2">About</a>
+    <a href="#section3">Contact</a>
   </div>
+</div>
+
 
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
   <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
@@ -247,5 +202,3 @@
   </script>
 </body>
 </html>
-
-
