--- a/index.html
+++ b/index.html
@@ -60,6 +60,60 @@
         box-sizing: border-box;
       }
     }
+
+#menu-button {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1000; /* Make sure it’s above everything */
+  cursor: pointer;
+  width: 36px;      /* slightly bigger clickable area */
+  height: 28px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#menu-button .bar {
+  width: 100%;
+  height: 4px;      /* a bit thicker for visibility */
+  background-color: black;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+#dropdown {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 36px;       /* just below the button */
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  padding: 8px 0;
+  min-width: 140px;
+  z-index: 9999;
+}
+
+#dropdown a {
+  text-decoration: none;
+  color: black;
+  padding: 8px 16px;
+  font-size: 1.2rem;  /* easier to read */
+  text-align: right;
+  display: block;
+}
+
+#dropdown a:hover {
+  background-color: #f0f0f0;
+}
+
+#menu-button:hover #dropdown {
+  display: flex;
+}
+
+    
   </style>
 </head>
 <body>
