--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Farfalle</title>
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
-
   <style>
     body {
       margin: 0;
@@ -21,8 +14,7 @@
       color: #333;
       font-size: 5rem;
       user-select: none;
-      /* Temporarily remove custom cursor to avoid confusion */
-      /* cursor: url('/path-to-image.png') 16 16, auto; */
+      cursor: url('/path-to-image.png') 16 16, auto;
       overflow-x: hidden;
     }
 
@@ -60,74 +52,63 @@
       }
     }
 
-    /* Menu Button CSS */
-    #menu-button {
+    /* Menu button container */
+    #menu-container {
       position: fixed;
       top: 20px;
       right: 20px;
-      z-index: 10000; /* extra high to be above everything */
+      z-index: 10000;
       cursor: pointer;
-      width: 36px;
-      height: 28px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      background-color: rgba(255, 0, 0, 0.4); /* RED BACKGROUND FOR TESTING, remove later */
-      border-radius: 4px;
-      padding: 4px;
-      box-sizing: border-box;
+      display: inline-block;
     }
 
-    #menu-button .bar {
-      width: 100%;
-      height: 4px;
-      background-color: black;
-      border-radius: 2px;
-      transition: 0.3s;
+    /* Menu button image */
+    #menu-button-image {
+      width: 40px; /* adjust size as needed */
+      height: 40px;
+      display: block;
     }
 
+    /* Dropdown menu */
     #dropdown {
       display: none;
-      flex-direction: column;
       position: absolute;
-      top: 36px; /* below the menu button */
+      top: 45px; /* just below the image */
       right: 0;
       background-color: white;
       border: 1px solid #ccc;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       padding: 8px 0;
       min-width: 140px;
-      z-index: 10001;
       font-size: 1.2rem;
+      flex-direction: column;
     }
 
+    /* Links inside dropdown */
     #dropdown a {
       text-decoration: none;
       color: black;
       padding: 8px 16px;
-      text-align: right;
       display: block;
+      text-align: right;
     }
 
     #dropdown a:hover {
       background-color: #f0f0f0;
     }
 
-    /* Show dropdown on hover */
-    #menu-button:hover #dropdown {
+    /* Show dropdown on hover of container */
+    #menu-container:hover #dropdown {
       display: flex;
     }
-
   </style>
 </head>
 <body>
   <div id="sketch-container"></div>
 
-  <!-- Menu Button -->
-  <div id="menu-button">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
+  <!-- Menu Button with Image -->
+  <div id="menu-container">
+    <img id="menu-button-image" src="path-to-your-menu-icon.png" alt="Menu Button" />
     <div id="dropdown">
       <a href="#section1">Home</a>
       <a href="#section2">About</a>
@@ -138,6 +119,11 @@
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
   <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
+
+  <!-- Your existing scripts here -->
+</body>
+</html>
+
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 
