--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       user-select: none;
       cursor: url('/path-to-image.png') 16 16, auto;
       overflow-x: hidden;
+
+      <div id="menu-container">
+  <img src="menu-icon.png" id="menu-button" alt="Menu" />
+  <div id="dropdown">
+    <a href="#section1">Home</a>
+    <a href="#section2">About</a>
+    <a href="#section3">Contact</a>
+  </div>
+</div>
+
     }
 
     #sketch-container {
