--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
   </div>
 
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
-  <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
+
+<div class="section" id="section2">
+  <div class="section-content">
+    <img src="farfallepainting.png" alt="Farfalle Painting" style="max-width: 90%; height: auto;" />
+  </div>
+</div>
+  
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
   <!-- Your existing scripts here -->
