--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Farfalle</title>
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 
   <style>
     body {
@@ -16,16 +25,6 @@
       user-select: none;
       cursor: url('/path-to-image.png') 16 16, auto;
       overflow-x: hidden;
-
-      <div id="menu-container">
-  <img src="menu-icon.png" id="menu-button" alt="Menu" />
-  <div id="dropdown">
-    <a href="#section1">Home</a>
-    <a href="#section2">About</a>
-    <a href="#section3">Contact</a>
-  </div>
-</div>
-
     }
 
     #sketch-container {
@@ -61,82 +60,16 @@
         box-sizing: border-box;
       }
     }
-
-    /* Menu button container */
-    #menu-container {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 10000;
-      cursor: pointer;
-      display: inline-block;
-    }
-
-    /* Menu button image */
-    #menu-button-image {
-      width: 40px; /* adjust size as needed */
-      height: 40px;
-      display: block;
-    }
-
-    /* Dropdown menu */
-    #dropdown {
-      display: none;
-      position: absolute;
-      top: 45px; /* just below the image */
-      right: 0;
-      background-color: white;
-      border: 1px solid #ccc;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 8px 0;
-      min-width: 140px;
-      font-size: 1.2rem;
-      flex-direction: column;
-    }
-
-    /* Links inside dropdown */
-    #dropdown a {
-      text-decoration: none;
-      color: black;
-      padding: 8px 16px;
-      display: block;
-      text-align: right;
-    }
-
-    #dropdown a:hover {
-      background-color: #f0f0f0;
-    }
-
-    /* Show dropdown on hover of container */
-    #menu-container:hover #dropdown {
-      display: flex;
-    }
   </style>
 </head>
 <body>
   <div id="sketch-container"></div>
 
-  <!-- Menu Button with Image -->
-  <div id="menu-container">
-    <img id="menu-button-image" src="path-to-your-menu-icon.png" alt="Menu Button" />
-    <div id="dropdown">
-      <a href="#section1">Home</a>
-      <a href="#section2">About</a>
-      <a href="#section3">Contact</a>
-    </div>
-  </div>
+  
 
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
-  <div class="section" id="section2"><div class="section-content">hello</div></div>
-
-
-  
+  <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
-
-  <!-- Your existing scripts here -->
-</body>
-</html>
-
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 
