--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
   
 
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
-  <div class="section" id="section2"><div class="section-content">Fuckin Herb</div></div>
+
+<div class="section" id="section2">
+  <div class="section-content">
+    <img src="/images/farfallepainting.png" style="width: 100%; height: 100%; object-fit: cover;" alt="Farfalle Painting">
+  </div>
+</div>
+  
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
