--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 
 <div class="section" id="section2">
   <div class="section-content">
-    <img src="/images/farfallepainting.png" style="width: 100%; height: 100%; object-fit: cover;" alt="Farfalle Painting">
+    <img src="/images/farfallepainting.png" class="slide-image" alt="Farfalle Painting">
   </div>
 </div>
+
   
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
