--- a/index.html
+++ b/index.html
@@ -69,12 +69,7 @@
 
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
 
-<div class="section" id="section2">
-  <div class="section-content">
-    <img src="/images/farfallepainting.png" class="slide-image" alt="Farfalle Painting">
-  </div>
-</div>
-
+<div class="section" id="section2"><div class="section-content">Go fuck yourself</div></div>
 
   
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
