--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
       height: 100vh;
       z-index: 0;
 
-
+<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
 
       
     }
@@ -69,6 +76,13 @@
 <body>
   <div id="sketch-container"></div>
 <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
  
 </div>
   
