--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,9 +32,6 @@
       width: 100vw;
       height: 100vh;
       z-index: 0;
-
-
-      
     }
 
     .section {
@@ -63,28 +58,82 @@
         box-sizing: border-box;
       }
     }
+
+    /* MENU STYLES */
+    #menu-container {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 2;
+      font-size: 1rem;
+    }
+
+    #menu-button {
+      background-color: #f4d35e;
+      border: none;
+      padding: 10px 16px;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    #dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      background-color: white;
+      border: 1px solid #ccc;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
+      z-index: 3;
+      border-radius: 5px;
+    }
+
+    #dropdown-menu a {
+      display: block;
+      padding: 10px 16px;
+      color: #333;
+      text-decoration: none;
+      white-space: nowrap;
+    }
+
+    #dropdown-menu a:hover {
+      background-color: #f4d35e;
+    }
+
+    #menu-container:hover #dropdown-menu {
+      display: block;
+    }
   </style>
 </head>
 <body>
+
+  <!-- MENU HTML -->
+  <div id="menu-container">
+    <button id="menu-button">Menu</button>
+    <div id="dropdown-menu">
+      <a href="#section1">Top</a>
+      <a href="#section2">Image</a>
+      <a href="#section3">Bottom</a>
+    </div>
+  </div>
+
+  <!-- SKETCH CONTAINER -->
   <div id="sketch-container"></div>
 
-
-  
-
+  <!-- PAGE CONTENT -->
   <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
 
-<div class="section" id="section2">
-  <div class="section-content">
-    <img src="/images/farfallepainting.png" style="max-width: 70%; max-height: 70vh; object-fit: contain;" alt="Farfalle Painting">
+  <div class="section" id="section2">
+    <div class="section-content">
+      <img src="/images/farfallepainting.png" style="max-width: 70%; max-height: 70vh; object-fit: contain;" alt="Farfalle Painting">
+    </div>
   </div>
-</div>
 
- 
-  
   <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
+  <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-
   <script>
     let farfalleImg;
     let icons = [];
@@ -120,7 +169,6 @@
     function draw() {
       background('#f8f8f2');
 
-      // Text color fade based on vertical mouse position
       let topColor = color(0);
       let bottomColor = color('#f4d35e');
       let fadeAmt = constrain(mouseY / height, 0, 1);
@@ -180,35 +228,27 @@
       resizeCanvas(windowWidth, windowHeight);
     }
 
-    // Scroll detection with direction
     window.addEventListener('scroll', () => {
       let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
 
       if (scrollTop > lastScrollTop) {
-        direction = 1; // scrolling down
+        direction = 1;
       } else if (scrollTop < lastScrollTop) {
-        direction = -1; // scrolling up
+        direction = -1;
       }
 
       lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
 
-      speedMultiplier = 4.0; // increase speed while scrolling
+      speedMultiplier = 4.0;
 
       clearTimeout(scrollTimeout);
       scrollTimeout = setTimeout(() => {
-        speedMultiplier = 1.0; // reset to normal after 150ms of no scroll
+        speedMultiplier = 1.0;
       }, 150);
     }, { passive: true });
-
-
- 
-    
   </script>
 
- 
-  
 </body>
-
 </html>
 
 
