--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@
       background-color: #f4d35e;
     }
 
-    #menu-container:hover #dropdown-menu {
-      display: block;
+  #menu-container:hover #dropdown-menu,
+#dropdown-menu:hover {
+  display: block;
+}
+
     }
   </style>
 </head>
