--- a/index.html
+++ b/index.html
@@ -59,52 +59,55 @@
       }
     }
 
-    /* MENU STYLES */
-    #menu-container {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 2;
-      font-size: 1rem;
-    }
+  #menu-container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 2;
+  font-size: 1rem;
+}
 
-    #menu-button {
-      background-color: #f4d35e;
-      border: none;
-      padding: 10px 16px;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 5px;
-    }
+/* Button */
+#menu-button {
+  background-color: #f4d35e;
+  border: none;
+  padding: 10px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+}
 
-    #dropdown-menu {
-      display: none;
-      position: absolute;
-      top: 50px;
-      right: 0;
-      background-color: white;
-      border: 1px solid #ccc;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
-      z-index: 3;
-      border-radius: 5px;
-    }
+/* Dropdown */
+#dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
+  z-index: 3;
+  border-radius: 5px;
+}
 
-    #dropdown-menu a {
-      display: block;
-      padding: 10px 16px;
-      color: #333;
-      text-decoration: none;
-      white-space: nowrap;
-    }
+/* Links */
+#dropdown-menu a {
+  display: block;
+  padding: 10px 16px;
+  color: #333;
+  text-decoration: none;
+  white-space: nowrap;
+}
 
-    #dropdown-menu a:hover {
-      background-color: #f4d35e;
-    }
+#dropdown-menu a:hover {
+  background-color: #f4d35e;
+}
 
-  #menu-container:hover #dropdown-menu,
-#dropdown-menu:hover {
+/* Keep dropdown visible on hover */
+#menu-container:hover #dropdown-menu {
   display: block;
 }
+
 
     }
   </style>
