--- a/index.html
+++ b/index.html
@@ -59,13 +59,16 @@
       }
     }
 
-  #menu-container {
+ #menu-container {
   position: fixed;
   top: 20px;
   right: 20px;
   z-index: 2;
   font-size: 1rem;
+  padding-bottom: 20px; /* ← this extends hover area downward */
 }
+
+
 
 /* Button */
 #menu-button {
