--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
 
   <!-- MENU HTML -->
   <div id="menu-container">
-    <button id="menu-button">Menu</button>
+   <div id="menu-button">
+  <img src="images/farfalle.png" alt="Menu" />
+</div>
+
     <div id="dropdown-menu">
       <a href="#section1">Top</a>
       <a href="#section2">Image</a>
