--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 <body>
 
   <!-- MENU HTML -->
-  <div id="menu-container">
-   <div id="menu-button">
+  <div 
   <img src="images/farfalle.png" alt="Menu" />
 </div>
 
